--- a/0-geofabric/geofabric.ipynb
+++ b/0-geofabric/geofabric.ipynb
@@ -1253,15 +1253,21 @@
     "# saving data\n",
     "path_project = os.path.expanduser('~/scratch/MESH-basic')\n",
     "path_results = os.path.expanduser('~/scratch/MESH-basic/geofabric')\n",
+    "path_results2 = os.path.expanduser('./results')\n",
     "\n",
     "try:\n",
     "    os.mkdir(path_project)\n",
-    "    os.mkdir(path_results)\n",
+    "    os.mkdir(path_results2)\n",
     "except:\n",
     "    pass\n",
     "\n",
     "div_4815_catchments.to_file(path_results + '/4815_catchments.shp')\n",
-    "div_4815_rivers.to_file(path_results + '/4815_rivers.shp')\n"
+    "div_4815_rivers.to_file(path_results + '/4815_rivers.shp')\n",
+    "\n",
+    "# save results to the geofabric results folder - this will be used in 3-model-run\n",
+    "div_4815_catchments.to_file(path_results2 + '/4815_catchments.shp')\n",
+    "div_4815_rivers.to_file(path_results2 + '/4815_rivers.shp')\n",
+    "\n"
    ]
   },
   {
