--- a/3-model-run/visualization.ipynb
+++ b/3-model-run/visualization.ipynb
@@ -5,129 +5,109 @@
    "id": "db3d56ee-347c-48ee-a6c2-0064a0f0e417",
    "metadata": {},
    "source": [
-    "# This notebook displays the input data for model 4815"
+    "# Spatial visualization of MESH runs"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "4059aa8a-9d7d-4bff-9f07-494a2bf4e02d",
+   "cell_type": "markdown",
+   "id": "5cdf5a50-8497-4e02-8931-c57cc96ed577",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import geopandas as gpd\n",
-    "import datetime\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
+    "This notebook is used to spatially visualize results from MESH runs. It is used to map the rank in the results netcdf of the simulation results with the corresponding polygon within the geofabric shapefile. This allows a seamless visualization using geopandas. \n",
     "\n",
-    "\n",
-    "#add reference"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "9a83c169-e933-4c1d-b3c0-61c2948eb10f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MESH_state_dir           = './results/' \n",
-    "Merit_catchment_shape    = '../0-geofabric/results/div_4815_catchments.shp'\n",
-    "Merit_river_shape        = '../0-geofabric/results/div_4815_rivers.shp'\n",
-    "#WSC_stations             = '../../shapefiles/BowBanff_WSC_Stations.shp'\n",
-    "#outdir                   = '../workflow_data/domain_BowAtBanff/visualizations/'\n",
-    "state_name               = 'MESH_output_streamflow.csv'\n",
-    "\n",
-    "#%% reading input shape files \n",
-    "catchment   = gpd.read_file(Merit_catchment_shape)\n",
-    "#wsc         = gpd.read_file(WSC_stations)\n",
-    "river       = gpd.read_file(Merit_river_shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "0ff4a583-34e0-4fd2-9a33-ec7df2b78137",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "font = {'family' : 'Times New Roman',\n",
-    "         'weight' : 'bold',\n",
-    "         'size'   : 20}\n",
-    "matplotlib.rc('font', **font)\n",
-    "cl =('b','r')\n",
-    "lsty  =  ['-','--']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "7309fb67-15b9-4477-a125-09129a4ff529",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "names   = [\"observation\",\"simulation\"] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "3c86ec69-bfaf-4bbf-bd82-f26d92f6f46d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def julian_todate (jdate):\n",
-    "    fmt = '%Y%j'\n",
-    "    datestd = datetime.datetime.strptime(jdate, fmt).date()\n",
-    "    return(datestd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "4b49aa5f-57e4-412a-ba19-e73db9977923",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def time_construct(data,time_step):\n",
-    "    # construct time index \n",
-    "    nn = len(data)\n",
-    "    ts = '%d'%data['month'][0]+'/'+'%d'%data['day'][0]+'/'+'%d'%data['YEAR'][0]\n",
-    "    te = '%d'%data['month'][nn-1]+'/'+'%d'%data['day'][nn-1]+'/'+'%d'%data['YEAR'][nn-1]\n",
-    "    tm = pd.date_range(start=ts, end=te, freq=time_step)\n",
-    "    return(tm)"
+    "The results from geofabric, i.e. catchment and river shapefiles, must be located in ./0-geofabric/results within the repository. Alternatively it can provide the path to the geofabric saved by default in the scracth directory. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3086fbb-fab0-46b5-9240-11e2f35bdf0e",
+   "id": "4059aa8a-9d7d-4bff-9f07-494a2bf4e02d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%% reading the input file \n",
-    "stflo = pd.read_csv(MESH_state_dir+state_name, skipinitialspace=True)\n",
-    "n = len(stflo)\n",
+    "import xarray as xr\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
     "\n",
-    "# replacing invalid streamflow observations with NAN \n",
-    "stflo[stflo == -1] = np.nan\n",
+    "import numpy as np\n",
+    "import geopandas as gpd\n",
+    "import math\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a83c169-e933-4c1d-b3c0-61c2948eb10f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drainage = xr.open_dataset('./MESH_drainage_database.nc')\n",
+    "forcing = xr.open_dataset('./MESH_forcing.nc')\n",
+    "catchment = gpd.read_file('../0-geofabric/results/4815_catchments.shp')\n",
     "\n",
-    "#%% construnct time index\n",
-    "month = np.zeros((n,1))\n",
-    "day   = np.zeros((n,1))\n",
+    "# results to be plotted\n",
+    "results = xr.open_dataset('./results/QO_H_GRD.nc')\n",
+    "plot_var = 'QO'\n",
+    "plot_time = 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ff4a583-34e0-4fd2-9a33-ec7df2b78137",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we can check that the order of the subbasins is the same for both datasets\n",
+    "drainage.load()\n",
+    "forcing.load()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1e4eb02-2fdf-468f-b725-0f9c683adba7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# obtain the order of the subbasin from the forcing file (this was created in 2-model-specific). \n",
+    "# note: this can also be done from the drainage file since they both have the same order\n",
+    "order = forcing['subbasin'].to_numpy()\n",
     "\n",
-    "for i in range(n):    \n",
-    "    jd     = '%d'%stflo['YEAR'][i]+'%d'%stflo['JDAY'][i]\n",
-    "    md     = julian_todate(jd)\n",
-    "    day[i] = md.day\n",
-    "    month[i] = md.month\n",
+    "# reorder the geofabric catchment file based on the forcing file\n",
+    "catchment.set_index('COMID', inplace=True)\n",
+    "catchment = catchment.reindex(order)\n",
     "\n",
-    "stflo['month'] = month\n",
-    "stflo['day']   = day\n",
+    "# adds the rank to the geofabric catchment file\n",
+    "catchment['Rank'] = drainage['Rank']\n",
     "\n",
-    "time = time_construct(stflo,'D')"
+    "# adds the plot var as a new column to plot results in catchment\n",
+    "catchment['plot_var'] = results[plot_var].isel(time=plot_time,lat=0)\n",
+    "catchment = catchment.reset_index()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7309fb67-15b9-4477-a125-09129a4ff529",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plotting \n",
+    "var = catchment['plot_var']\n",
+    "\n",
+    "vmin = math.floor(min(var.min().values,var.min()))\n",
+    "vmax = math.floor(min(var.max().values,var.max()))\n",
+    "\n",
+    "fig, ax = plt.subplots(layout='constrained')\n",
+    "sm = plt.cm.ScalarMappable(norm=plt.Normalize(vmin=vmin, vmax=vmax))\n",
+    "sm._A = []\n",
+    "cbr = fig.colorbar(sm, ax=ax)\n",
+    "\n",
+    "catchment.plot(ax=ax,column='plot_var', vmin=vmin,vmax=vmax, edgecolor=\"face\");\n",
+    "\n",
+    "# adjust the title according to the plotted variable\n",
+    "plt.title('Streamflow data')"
    ]
   },
   {
