update of 2-model-specific

--- a/2-model-specific/meshflow.ipynb
+++ b/2-model-specific/meshflow.ipynb
@@ -22,13 +22,13 @@
    "outputs": [],
    "source": [
     "# main work path\n",
-    "work_path = '/home/roalva/scratch/4815'\n",
+    "work_path = '/home/roalva/scratch/MESH-basic'\n",
     "\n",
     "config = {\n",
-    "    'riv': os.path.join(work_path, 'geofabric', '4815_BM_rivers.shp'),\n",
-    "    'cat': os.path.join(work_path, 'geofabric', '4815_BM_catchments.shp'),\n",
-    "    'landcover': os.path.join(work_path, 'gistool_outputs_BM', 'landsat', '4815_BM_models_stats_NA_NALCMS_landcover_2020_30m.csv'),\n",
-    "    'forcing_files': os.path.join(work_path, 'easymore_outputs', 'remapped_BM'),\n",
+    "    'riv': os.path.join(work_path, 'geofabric', '4815_rivers.shp'),\n",
+    "    'cat': os.path.join(work_path, 'geofabric', '4815_catchments.shp'),\n",
+    "    'landcover': os.path.join(work_path, 'gistool_outputs', 'landsat', '4815_stats_NA_NALCMS_landcover_2020_30m.csv'),\n",
+    "    'forcing_files': os.path.join(work_path, 'easymore_outputs', 'remapped'),\n",
     "    'forcing_vars': [\n",
     "        'RDRS_v2.1_P_UVC_10m',\n",
     "        'RDRS_v2.1_P_FI_SFC',\n",
@@ -1481,7 +1481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp1.save('/home/roalva/scratch/4815/mesh_model/')"
+    "exp1.save('/home/roalva/scratch/MESH-basic/mesh_model/')"
    ]
   },
   {
